Fixes that buttons are not fully visible in instant trade details

--- a/dev/blocks/trade-animation/trade-animation.scss
+++ b/dev/blocks/trade-animation/trade-animation.scss
@@ -511,3 +511,9 @@
     }
   }
 }
+
+@media (max-width: 1000px) {
+  #trade-exchange .selected-trade .success-section {
+    top: 0;
+  }
+}
